--- a/foxmail/ui/mainwindow - 副本.ui
+++ b/foxmail/ui/mainwindow - 副本.ui
@@ -10,6 +10,9 @@
     <height>771</height>
    </rect>
   </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::CustomContextMenu</enum>
+  </property>
   <property name="windowTitle">
    <string>Foxmail</string>
   </property>
@@ -284,7 +287,7 @@ color: silver;</string>
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,2,3">
+     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,2,0">
       <item>
        <widget class="QTreeWidget" name="treeMailWidget">
         <attribute name="headerVisible">
@@ -378,7 +381,11 @@ color: silver;</string>
          <widget class="QComboBox" name="comboBox"/>
         </item>
         <item>
-         <widget class="QListWidget" name="listEmails"/>
+         <widget class="QListWidget" name="listEmails">
+          <property name="contextMenuPolicy">
+           <enum>Qt::CustomContextMenu</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -585,6 +592,9 @@ QPushButton:pressed, QPushButton:checked
            </item>
           </layout>
          </widget>
+        </item>
+        <item>
+         <widget class="QWidget" name="widget" native="true"/>
         </item>
         <item>
          <widget class="QTextBrowser" name="emailPreview">
