--- a/foxmail/ui/accountdialog.ui
+++ b/foxmail/ui/accountdialog.ui
@@ -32,6 +32,9 @@
    <iconset>
     <normaloff>logo.png</normaloff>logo.png</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: #2c3e50;</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
     <property name="geometry">
